# aglaia

./: .gitignore  ABOUT.md  Aglaia.spec  CHANGELOG.md  LICENSE  README.md  aglaia.py  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml  linux-gpu-appimage-test.yml  publish.yml  release.yml  site.yml
Casks/: aglaia.rb
Formula/: aglaia-cli.rb  aglaia.rb
aglaia/: ImageBuffer.py  __init__.py  __main__.py  app.py  assets.py  version.py  worker_count.py
aglaia/app_data/: __init__.py  db.py  downloads.py  filetype_register.py  models.py  modes.py  plugins.py
aglaia/cli/: __init__.py  shared.py
aglaia/config/: config_default.yaml  default.yml
aglaia/gui/: AboutDialog.py  BugReportDialog.py  CalibrationDialogs.py  DebugViewerTab.py  DpiCalibrationTab.py  FreehandTab.py  LanguageTagInput.py  MainWindow.py  MistralJobsTab.py  ModePicker.py  ModelDownloaderTab.py  ModelInstallPrompt.py  OnboardingWizard.py  PageWarningDialog.py  PipelineEditorWidget.py  PipelinePreviewPanel.py  PipelineStepsOutline.py  ScanItemWidget.py  ScansDpiTab.py  ScansGalleryView.py  ScansTableView.py  SettingsTab.py  StartupWindow.py  StatusBarWidget.py  Toast.py  VoiceWorkerVosk.py  WelcomeDialog.py  ZoomCanvas.py  bridge_receive.py  colors.py  plugin_trust.py  theme.py  timeago.py  voice_transcript.py  widgets.py
aglaia/i18n/: __init__.py  aglaia_en_US.ts  aglaia_fr_FR.ts
aglaia/processors/: Binarizer.py  DPIfixer.py  MarginSetter.py  PageDetector.py  PageDewarper.py  SkewFinder.py  TrapezoidalCorrection.py  __init__.py  abstraction.py  batching.py  dewarp_batcher.py  geometry.py  option_specs.py  page_dewarp_mlx.py  page_dewarp_padded.py  registry.py  replay_transform.py  sheet_models.py
aglaia/server/: __init__.py  app.py  db.py  mailer.py  processor.py
aglaia/storage/: __init__.py  db.py  debug_chain.py  debug_renderers.py  persister.py  repo.py
aglaia/userdata/: __init__.py
aglaia/workers/: BlobNormalizer.py  Calibrator.py  CreditCardDPI.py  ImportHelpers.py  Initializer.py  IntegratedProcessingChain.py  MistralBatchWorker.py  OcrWorker.py  PDFprocessor.py  ProcessMonitor.py  Replay.py  SiftTracker.py  bridge_bundle.py  bridge_server.py  bridge_tls.py  chain_abstraction.py  cli.py  dewarp_solver.py  headless.py  macos_mem.py  md_export.py  oplog.py  setup_cli.py  slim_export.py  worker_lifecycle.py
aglaia_jbig2/: Cargo.toml  pyproject.toml
aglaia_jbig2/aglaia_jbig2/: __init__.py
aglaia_jbig2/src/: lib.rs
assets/app/: AglaiaDoc.icns
config/: config_default.yaml  default.yml
config/pipelines/: book_curved_x2.yaml  sheet_flat_x1.yaml
docs/: README.md  app_data.md  architecture.md  calibration.md  cli.md  configuration.md  development.md  distribution.md  export.md  gui.md  i18n.md  imagebuffer.md  lessons.md  markdown_export.md  ocr-benchmark.md  ocr.md  pipeline.md  pipeline_params.tsv  processors.md  quickstart.md  server.md  storage.md  subcommand-cli.md  theme.md
lib/: ImageBuffer.py  Status.py  assets.py
lib/app_data/: Aglaia.icns  __init__.py  db.py  model-list.json  modes.py  secrets.py
lib/gui/: AboutDialog.py  BugReportDialog.py  CalibrationDialogs.py  CameraEnum.py  DebugViewerTab.py  DpiCalibrationTab.py  FlowLayout.py  FreehandTab.py  LanguageTagInput.py  MainWindow.py  ModePicker.py  ModelDownloaderTab.py  PageWarningDialog.py  PipelineEditorWidget.py  PipelinePreviewPanel.py  PipelineStepsOutline.py  ScanItemWidget.py  ScansDpiTab.py  ScansGalleryView.py  ScansTableView.py  SettingsTab.py  StartupWindow.py  StatusBarWidget.py  Toast.py  VoiceWorkerVosk.py  WebcamThread.py  WelcomeDialog.py  ZoomCanvas.py  __init__.py  colors.py  path_reveal.py  plugin_trust.py  theme.py  voice_transcript.py  widgets.py
lib/i18n/: __init__.py  aglaia_en_US.ts  aglaia_fr_FR.ts
lib/processors/: Binarizer.py  DPIfixer.py  MarginSetter.py  PageDetector.py  PageDewarper.py  SkewFinder.py  TrapezoidalCorrection.py  __init__.py  abstraction.py  option_specs.py  page_dewarp_mlx.py  page_dewarp_padded.py  registry.py  sheet_models.py  utils.py
lib/storage/: __init__.py  db.py  debug_chain.py  debug_renderers.py  persister.py  repo.py
lib/userdata/: __init__.py  db.py  repo.py
lib/workers/: Calibrator.py  ImportHelpers.py  Initializer.py  IntegratedProcessingChain.py  OcrWorker.py  PDFprocessor.py  ProcessMonitor.py  Replay.py  chain_abstraction.py  cli.py  headless.py  macos_mem.py  md_export.py  pdf_export.py  pdf_extract.py  slim_export.py
packaging/: aglaia-mime.xml  aglaia.desktop  aglaia.iss  build_appimage.sh  entitlements.plist
scripts/: add_license_headers.py  build_dmg.sh  fetch_llama_server.py  gen_calibration_board.py  i18n_compile.sh  i18n_extract.sh  push_aglaia_models.py  sign_and_notarize.sh
site/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  wrangler.toml
site/scripts/: gen-landing-assets.py  sync-docs.mjs
test_data/test_athanase/: test-athanase.agl  test-athanase.md
test_data/test_augustin/: test-augustin-confessions-vii.agl  test-augustin-confessions-vii.md  test-augustin-confessions-vii_mistral_cloudOCR.md
test_data/test_balthasar/: test-balthasar.md  test-balthasar_mistral_cloudOCR.md
tests/: README.md  conftest.py  test_downloads.py  test_imagebuffer_pickle.py  test_plugins.py  test_processing_chain.py  test_secrets.py  test_step_overrides.py
tests/cli/: test_dispatch.py
tests/gui/: test_capture_unification.py  test_progress_bar.py  test_step_toggle_cache.py
tests/processors/: __init__.py  test_batching.py  test_describe_parameters.py  test_dewarp_batchable.py  test_dewarp_batcher.py  test_dewarp_warmstart.py  test_flat_spline_backends.py  test_layout_backends.py  test_margin_clusters.py  test_margin_clusters_realdata.py  test_registry_frozen.py  test_sheet_models.py  test_smart_merge.py  test_trap_autodiscard.py  test_trap_block_rotation.py  test_trap_vblocks.py  test_trapezoidal_geometry.py  test_trapezoidal_processor.py  test_xy_cut.py
tests/server/: conftest.py  test_api.py  test_processor.py
tests/storage/: test_branches.py  test_db.py  test_debug_renderer_alias.py  test_persister.py  (+3 more)
(+131 files in other folders)
