[project]
name = "aglaia"
version = "0.1.0a6"
description = "Webcam book scanner for macOS — capture, dewarp, binarize, OCR to searchable PDF/Markdown."
readme = "README.md"
license = { file = "LICENSE" }   # PolyForm Shield License 1.0.0 (source-available, no-compete)
requires-python = ">=3.12, <3.13"
dependencies = [
    "doxapy>=0.9.4",
    "jax>=0.9.0",
    "jaxlib>=0.9.0",
    "ml-dtypes>=0.5.4",
    "numpy>=1.26.0, <2.1.0",
    "opencv-python-headless>=4.8.0",
    "page-dewarp>=0.2.7",
    "pikepdf>=10.0.0",
    "pillow>=10.0.0",
    "platformdirs>=4.3.0",
    "psutil>=7.2.2",
    "pypdfium2>=4.30.0",
    "python-slugify>=8.0.0",
    "pyyaml>=6.0.0",
    "questionary>=2.1.1",
    "rich>=13.0.0",
    "scipy>=1.11.0",
]
# NOTE: the OCR engines (surya, paddle-VL) are NOT base dependencies. They
# are heavy and — critically — mutually exclusive: surya-ocr pins
# huggingface-hub<1 while mlx-vlm (paddle-VL) needs >=1.5. A plain
# `pip install aglaia` must resolve cleanly, so neither is in the base set.
# `uv sync` (dev / the macOS bundle) reconciles both via the
# [tool.uv] override-dependencies below; a loose pip install cannot, so
# pick ONE engine extra. Apple Vision (macos extra) needs no Python OCR dep.

[project.optional-dependencies]
# OCR engine: Surya (cross-platform, GPU-optional). Pins huggingface-hub<1,
# so it CANNOT be installed alongside the `paddle` extra in a loose pip
# resolve — pick one. `pip install "aglaia[surya]"`.
surya = [
    "surya-ocr>=0.20.0",
    # Declared directly (not just transitively via surya-ocr) so the
    # [tool.uv.sources] pytorch-cpu pin actually applies — uv ignores sources
    # for purely-transitive deps. Keeps the CUDA nvidia-cu12-* libs (~2-3 GB)
    # out of the Linux bundle; Surya OCR runs through llama-server, not torch.
    "torch>=2.7.0,<3",
]
# OCR engine: PaddleOCR-VL — the paddleocr orchestrator + CPU paddlepaddle +
# the MLX vision-language model. Needs huggingface-hub>=1.5 (via mlx-vlm),
# so it conflicts with `surya` in a loose resolve. `pip install "aglaia[paddle]"`.
paddle = [
    "paddleocr[doc-parser]>=3.6.0",
    "paddlepaddle>=3.2.1",
    "mlx-vlm>=0.6.0",
]
# Cross-platform GUI (PySide6 + theme). Decoupled from `macos` so a
# CLI-only / headless install (the base dependencies) stays slim — no
# Qt download. The capture GUI on macOS needs `gui` + `macos` together.
# GUI uses only QtCore/QtGui/QtSvg/QtWidgets — all in pyside6-essentials.
# Deliberately NOT the full `pyside6` meta-package: that pulls
# pyside6-addons → QtWebEngine, which (a) aglaia never imports, (b) bloats
# the install to ~2 GB, and (c) ships a nested helper app that fails
# Homebrew's ad-hoc codesign ("code object is not signed at all").
gui = [
    "pyside6-essentials>=6.7.0",
    "pyqtdarktheme>=2.1.0",
]
# Cross-platform offline voice control (Linux/Windows; macOS uses Apple
# Speech). Constrained Vosk + a small downloaded model. Optional.
voice = [
    # vosk dropped macOS wheels after 0.3.44 (universal2; runs on arm64).
    # Linux/Windows keep the newer release.
    "vosk>=0.3.45; sys_platform != 'darwin'",
    "vosk==0.3.44; sys_platform == 'darwin'",
    "sounddevice>=0.4.6",
]
macos = [
    "pyobjc-framework-avfoundation>=10.0",
    "pyobjc-framework-cocoa>=10.0",
    "pyobjc-framework-speech>=10.0",
    "pyobjc-framework-vision>=10.0",
    # MLX backend for PageDewarper. Required on arm64 macOS to avoid
    # JAX-CPU host-pool leak (workers ballooning to 14–58 GB during
    # cubic-sheet optimisation). Disabled outside arm64 by the marker.
    "mlx>=0.20; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
dev = [
    "pytest>=8.0.0",
    # Generates the printable camera-calibration chessboard PDFs
    # (scripts/gen_calibration_board.py) at exact mm dimensions.
    "reportlab>=4.0.0",
]
package = [
    # macOS .app bundle builder. Used via `uv run pyinstaller Aglaia.spec`.
    "pyinstaller>=6.10.0",
]
cuda = [
    # CUDA 12 wheels for JAX — speeds up PageDewarper optimisation on NVIDIA GPUs.
    # Install via: uv sync --extra cuda
    "jax[cuda12]>=0.9.0",
    # On-device (vmap-batchable) L-BFGS for GPU-batched page dewarp. A GPU-only
    # win — a single small problem loses to CPU, so batching is the lever (see
    # aglaia/processors/dewarp_batcher.py + #28). Pure Python on JAX; the batched
    # solver imports it lazily and the CPU per-page path never needs it.
    "optax>=0.2.0",
]
jbig2 = [
    # Native JBIG2 encoder for PDF export. Build the wheel locally with
    #   cd aglaia_jbig2 && uv run maturin develop --release
    "aglaia_jbig2",
]
cloud = [
    # Cloud OCR card — Mistral Document AI (OCR) over HTTPS. `keyring`
    # stores the API key in the OS keychain (macOS Keychain / Windows
    # Credential Locker / Linux Secret Service), with a plaintext
    # APP_DATA/.env fallback when no keychain backend is available
    # (headless Linux/Windows).
    "mistralai>=1.0.0",
    "keyring>=24.0.0",
]
# Optional `keyring` backends — install one to keep the Mistral key in a
# password manager instead of the OS keychain. keyring auto-discovers any
# installed backend (highest-priority wins); no code change needed.
#   uv sync --extra cloud --extra keyring-bitwarden
keyring-bitwarden = [
    "bitwarden-keyring>=0.3.1",   # secrets in BitWarden (needs `bw` CLI)
]
keyring-1password = [
    "onepassword-keyring>=0.1.1",  # secrets in 1Password (needs `op` CLI)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[project.scripts]
# `pip install aglaia` → an `aglaia` command (the GUI/CLI entry; routes through
# aglaia/__main__.py so multiprocessing-spawn is wired up first).
aglaia = "aglaia.__main__:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["aglaia*"]

[tool.setuptools.package-data]
# Ship every runtime data file inside the wheel so a pip install works
# without the source tree: icons/logos/previews/calibration boards,
# default.yml + pipeline YAMLs (resolved via aglaia.assets), the SQLite
# schema migrations (db.py globs schema/*.sql at runtime — omitting these
# means "no such table: project" on first open), the model catalogue, and
# the compiled Qt translations.
aglaia = [
    "assets/**/*",
    "config/**/*",
    "storage/schema/*.sql",
    "app_data/*.json",
    "i18n/*.ts",
    "i18n/qm/*.qm",
]

[dependency-groups]
dev = [
    "maturin>=1.13.3",
]

# aglaia_jbig2 lives in-tree, built locally with maturin. Without this
# block uv can't resolve it (PyPI has nothing under that name) and the
# whole sync errors out even when the jbig2 extra isn't requested,
# because uv walks every platform split.
# CPU-only torch on Linux. PyPI's default linux `torch` wheel is the CUDA
# build, dragging in ~2-3 GB of nvidia-cu12-* libs (cuDNN, cuBLAS, NCCL…) that
# blow past GitHub's 2 GiB release-asset cap and are dead weight here anyway:
# Surya OCR runs through the `llama-server` binary, not torch-GPU. macOS/Windows
# keep the default wheel (already CPU/MPS — no CUDA pull there).
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
aglaia_jbig2 = { path = "./aglaia_jbig2", editable = true }
torch = { index = "pytorch-cpu" }

# Resolver overrides — used to break unsolvable cross-package version
# conflicts when the install must satisfy multiple "tested with"
# windows. ``transformers>=5.5,<5.10`` matches mlx-vlm 0.6.x's actual
# tested band; surya-ocr 0.20 transitively allows huggingface_hub<1
# which clashes with transformers 5.x's huggingface_hub>=1.5 floor —
# overriding lets the resolver pick a compatible huggingface_hub.
[tool.uv]
override-dependencies = [
    "transformers>=5.5,<5.10",
    "huggingface-hub>=1.5",
    # page-dewarp requires a bare `opencv-python` (GUI build) while aglaia
    # pins `opencv-python-headless`. Both distributions install into the SAME
    # `cv2/` directory, so when they resolve to DIFFERENT versions (headless
    # held at 4.11 by our numpy<2.1 pin; full floated to 4.13) a reinstall
    # leaves a half-written, broken `cv2/` (missing __init__/.so → `cv2 has
    # no attribute 'imdecode'`), and PyInstaller bundles whichever payload
    # wins non-deterministically. Pinning the GUI build to the same version
    # as headless keeps the shared `cv2/` a single consistent payload.
    "opencv-python==4.11.0.86",
]
