[project]
name = "aglaia"
version = "0.1.0rc1"
description = "Webcam book scanner for macOS — capture, dewarp, binarize, OCR to searchable PDF/Markdown."
readme = "README.md"
license = { file = "LICENSE" }   # PolyForm Shield License 1.0.0 (source-available, no-compete)
requires-python = ">=3.12, <3.13"
dependencies = [
    "doxapy>=0.9.4",
    # HTML→Markdown for VLM OCR engines that emit HTML (Surya). Pure Python, no
    # transitive deps; the engine falls back to a tag-strip if it's ever absent.
    "html2text>=2024.2.26",
    "jax>=0.9.0",
    "jaxlib>=0.9.0",
    "langcodes[data]>=3.5.1",
    "ml-dtypes>=0.5.4",
    "numpy>=1.26.0, <2.1.0",
    "opencv-python-headless>=4.8.0",
    "page-dewarp>=0.2.7",
    "pikepdf>=10.0.0",
    "pillow>=10.0.0",
    "platformdirs>=4.3.0",
    "psutil>=7.2.2",
    "pypdfium2>=4.30.0",
    "python-slugify>=8.0.0",
    "pyyaml>=6.0.0",
    "questionary>=2.1.1",
    "rich>=13.0.0",
    "scipy>=1.11.0",
    # Subcommand CLI (gui/run/setup/…). Lightweight pure-Python (Click + the
    # already-present rich); the CLI is the primary user surface, so this one
    # dep earns a place in base. See docs/subcommand-cli.md.
    "typer>=0.12",
]
# NOTE: the local VLM OCR engines are NOT base dependencies — they're heavy
# and the serving backend (mlx-vlm) lives in the `macos` / `cuda` extras. A
# plain `pip install aglaia` stays slim; `uv sync` (dev / the macOS bundle)
# reconciles versions via the [tool.uv] override-dependencies below. Apple
# Vision (macos extra) needs no Python OCR dep.

[project.optional-dependencies]
# NOTE: Surya 2 OCR no longer has its own extra. It's a Qwen3.5-VL model now
# served through the shared local VLM backend (mlx-vlm in `macos`, vLLM in
# `cuda`) like glm/unlimited — so `--ocr surya` needs no Surya-specific deps,
# and the old surya-ocr/torch/llama-server/GGUF stack (+ its conflicts) is gone.
# (PaddleOCR-VL was dropped 2026-07: weak on Greek, and it dragged in
# paddleocr + paddlepaddle + opencv-contrib for little gain.)
# NOTE: the vLLM serving backend (for the `glm` / `unlimited` OCR engines on
# CUDA/Linux) is intentionally NOT a managed extra. vLLM hard-pins an exact
# torch/CUDA build and conflicts with every other OCR stack here, so it must be
# installed per-box to match the local CUDA (e.g. `uv pip install vllm`). The
# VllmBackend only needs `vllm` importable. Apple Silicon needs nothing extra —
# those engines serve via the `mlx-vlm` in the `macos` extra.
# Cross-platform GUI (PySide6 + theme). Decoupled from `macos` so a
# CLI-only / headless install (the base dependencies) stays slim — no
# Qt download. The capture GUI on macOS needs `gui` + `macos` together.
# GUI uses only QtCore/QtGui/QtSvg/QtWidgets — all in pyside6-essentials.
# Deliberately NOT the full `pyside6` meta-package: that pulls
# pyside6-addons → QtWebEngine, which (a) aglaia never imports, (b) bloats
# the install to ~2 GB, and (c) ships a nested helper app that fails
# Homebrew's ad-hoc codesign ("code object is not signed at all").
gui = [
    "pyside6-essentials>=6.7.0",
    "pyqtdarktheme>=2.1.0",
    # aglaia-bridge receiver (#47): self-signed TLS cert for the QR-pinned
    # LAN transfer, and a pure-Python QR encoder (no C deps, bundle-friendly).
    "cryptography>=42.0",
    "segno>=1.6.0",
]
# Cross-platform offline voice control (Linux/Windows; macOS uses Apple
# Speech). Constrained Vosk + a small downloaded model. Optional.
voice = [
    # vosk dropped macOS wheels after 0.3.44 (universal2; runs on arm64).
    # Linux/Windows keep the newer release.
    "vosk>=0.3.45; sys_platform != 'darwin'",
    "vosk==0.3.44; sys_platform == 'darwin'",
    "sounddevice>=0.4.6",
]
macos = [
    "pyobjc-framework-avfoundation>=10.0",
    "pyobjc-framework-cocoa>=10.0",
    "pyobjc-framework-speech>=10.0",
    "pyobjc-framework-vision>=10.0",
    # MLX backend for PageDewarper. Required on arm64 macOS to avoid
    # JAX-CPU host-pool leak (workers ballooning to 14–58 GB during
    # cubic-sheet optimisation). Disabled outside arm64 by the marker.
    "mlx>=0.30; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # MLX VLM serving backend (mlx_vlm.server). The local OCR VLM engine
    # `glm` serves through it on Apple Silicon; `unlimited` uses
    # it IN-PROCESS (mlx_vlm.load/generate) for the fused multipage R-SWA path.
    # Pinned to the upstream commit that first ships the `unlimited_ocr`
    # model_type (PR Blaizzy/mlx-vlm#1427, merged 2026-07-01) — not on PyPI yet
    # (latest 0.6.3). mlx-vlm resolves model_type→mlx_vlm.models.{name} with no
    # external registration hook, so the model must live inside the package →
    # git pin. Verified: this commit's `mlx_vlm.server` CLI is flag-compatible
    # with the server-based engines. Relax to a version once a release ships
    # `unlimited_ocr`. Disjoint from the `cuda` extra's vLLM by platform marker.
    "mlx-vlm @ git+https://github.com/Blaizzy/mlx-vlm.git@9909cee70001dcb7a901ce3ec859c2cc5cea80c1 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # `unlimited` builds its repetition-suppression logits processor from
    # mlx-lm (a mlx-vlm dep, declared explicitly since we import it directly).
    "mlx-lm>=0.28; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
dev = [
    "pytest>=8.0.0",
    # Generates the printable camera-calibration chessboard PDFs
    # (scripts/gen_calibration_board.py) at exact mm dimensions.
    "reportlab>=4.0.0",
    # FastAPI's TestClient (starlette) needs httpx — server API tests.
    "httpx>=0.27",
]
package = [
    # macOS .app bundle builder. Used via `uv run pyinstaller Aglaia.spec`.
    "pyinstaller>=6.10.0",
]
cuda = [
    # CUDA 12 wheels for JAX — speeds up PageDewarper optimisation on NVIDIA GPUs.
    # Install via: uv sync --extra cuda
    "jax[cuda12]>=0.9.0",
    # On-device (vmap-batchable) L-BFGS for GPU-batched page dewarp. A GPU-only
    # win — a single small problem loses to CPU, so batching is the lever (see
    # aglaia/processors/dewarp_batcher.py + #28). Pure Python on JAX; the batched
    # solver imports it lazily and the CPU per-page path never needs it.
    "optax>=0.2.0",
    # vLLM serving backend for the local OCR VLM engines (`glm` / `unlimited`) on
    # Linux — so `--extra cuda` gives a working local VLM backend. GPU when a CUDA
    # torch is present; CPU otherwise (the bundled torch is the CPU build via the
    # pytorch-cpu index — the "worst case" path). Disjoint from `macos`'s mlx-vlm
    # by platform marker. Conflicts with `surya` (declared in [tool.uv]).
    "vllm>=0.6.0; sys_platform == 'linux'",
]
jbig2 = [
    # Native JBIG2 encoder for PDF export. Build the wheel locally with
    #   cd aglaia_jbig2 && uv run maturin develop --release
    "aglaia_jbig2",
]
cloud = [
    # Cloud OCR card — Mistral Document AI (OCR) over HTTPS. `keyring`
    # stores the API key in the OS keychain (macOS Keychain / Windows
    # Credential Locker / Linux Secret Service), with a plaintext
    # APP_DATA/.env fallback when no keychain backend is available
    # (headless Linux/Windows).
    "mistralai>=1.0.0",
    "keyring>=24.0.0",
]
# Optional `keyring` backends — install one to keep the Mistral key in a
# password manager instead of the OS keychain. keyring auto-discovers any
# installed backend (highest-priority wins); no code change needed.
#   uv sync --extra cloud --extra keyring-bitwarden
keyring-bitwarden = [
    "bitwarden-keyring>=0.3.1",   # secrets in BitWarden (needs `bw` CLI)
]
keyring-1password = [
    "onepassword-keyring>=0.1.1",  # secrets in 1Password (needs `op` CLI)
]
# Warm-pool HTTP job server (`aglaia server`, #52). Not in base — the server
# is an opt-in daemon. Pairs with the `cloud` extra for Mistral batch OCR.
server = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "python-multipart>=0.0.9",   # multipart/form-data uploads on /run
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[project.scripts]
# `pip install aglaia` → an `aglaia` command (the GUI/CLI entry; routes through
# aglaia/__main__.py so multiprocessing-spawn is wired up first).
aglaia = "aglaia.__main__:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["aglaia*"]

[tool.setuptools.package-data]
# Ship every runtime data file inside the wheel so a pip install works
# without the source tree: icons/logos/previews/calibration boards,
# default.yml + pipeline YAMLs (resolved via aglaia.assets), the SQLite
# schema migrations (db.py globs schema/*.sql at runtime — omitting these
# means "no such table: project" on first open), the model catalogue, and
# the compiled Qt translations.
aglaia = [
    "assets/**/*",
    "config/**/*",
    "storage/schema/*.sql",
    "app_data/*.json",
    "i18n/*.ts",
    "i18n/qm/*.qm",
]

[dependency-groups]
dev = [
    "maturin>=1.13.3",
]

# aglaia_jbig2 lives in-tree, built locally with maturin. Without this
# block uv can't resolve it (PyPI has nothing under that name) and the
# whole sync errors out even when the jbig2 extra isn't requested,
# because uv walks every platform split.
# CPU-only torch on Linux. PyPI's default linux `torch` wheel is the CUDA
# build, dragging in ~2-3 GB of nvidia-cu12-* libs (cuDNN, cuBLAS, NCCL…) that
# blow past GitHub's 2 GiB release-asset cap and are dead weight here anyway:
# Surya OCR runs through the `llama-server` binary, not torch-GPU. macOS/Windows
# keep the default wheel (already CPU/MPS — no CUDA pull there).
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
aglaia_jbig2 = { path = "./aglaia_jbig2", editable = true }
torch = { index = "pytorch-cpu" }

# Resolver overrides — used to break unsolvable cross-package version
# conflicts when the install must satisfy multiple "tested with"
# windows. ``transformers>=5.5,<5.10`` matches mlx-vlm 0.6.x's actual
# tested band; surya-ocr 0.20 transitively allows huggingface_hub<1
# which clashes with transformers 5.x's huggingface_hub>=1.5 floor —
# overriding lets the resolver pick a compatible huggingface_hub.
[tool.uv]
override-dependencies = [
    "transformers>=5.5,<5.10",
    "huggingface-hub>=1.5",
    # page-dewarp requires a bare `opencv-python` (GUI build) while aglaia
    # pins `opencv-python-headless`. Both distributions install into the SAME
    # `cv2/` directory, so when they resolve to DIFFERENT versions (headless
    # held at 4.11 by our numpy<2.1 pin; full floated to 4.13) a reinstall
    # leaves a half-written, broken `cv2/` (missing __init__/.so → `cv2 has
    # no attribute 'imdecode'`), and PyInstaller bundles whichever payload
    # wins non-deterministically. Pinning the GUI build to the same version
    # as headless keeps the shared `cv2/` a single consistent payload.
    # NB: the git-pinned mlx-vlm (unlimited_ocr) declares opencv-python>=4.12,
    # but 4.12+ needs numpy>=2.1 (we hold numpy<2.1) — so we force 4.11.0.86.
    # Verified functional: mlx-vlm's cv2 use works on 4.11. If a fresh sync
    # leaves a half-written cv2/, force-reinstall the three opencv distros.
    "opencv-python==4.11.0.86",
    "opencv-python-headless==4.11.0.86",
]
